--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,12 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: In the world of entertaining pressure
+author: Volkova Anastasiia
+email: nastyavolkovasoc412@yandex.ru
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I am 23 years old nerd who is really fascinated by data analysis.
 
 # social links
-twitter_username: your-twitter-handle
-github_username:  your-github-handle
+github_username:  mibisako
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-minimal
+theme: minima
